--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple_Dark">#521C98</color>
     <color name="purple_light">#9D44C0</color>
+    <color name="grey">#E9E9E9</color>
 </resources>
