--- a/app/src/main/res/layout/viewholder_pup_list.xml
+++ b/app/src/main/res/layout/viewholder_pup_list.xml
@@ -18,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/item_1" />
+        app:srcCompat="@drawable/item_1"
+        tools:srcCompat="@drawable/item_1" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -37,7 +38,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/star" />
+            app:srcCompat="@drawable/star"
+            tools:src="@drawable/star"
+            tools:srcCompat="@drawable/star" />
 
         <TextView
             android:id="@+id/scoreText"
