--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -341,6 +341,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="See all"
+                    android:textAlignment="textEnd"
                     android:textColor="@color/purple_light" />
             </LinearLayout>
 
