modify margin of some layout

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -25,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="16dp"
                     android:padding="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -59,6 +59,7 @@
                     android:layout_width="0dp"
                     android:layout_height="290dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/grey_background"
@@ -92,6 +93,7 @@
                     android:layout_weight="1"
                     android:text="title"
                     android:textStyle="bold"
+                    android:layout_marginTop="16dp"
                     android:singleLine="true"
                     android:layout_marginStart="16dp"
                     android:textSize="23sp"
@@ -190,7 +192,10 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/addToCardBtn"
-                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 style="@android:style/Widget.Button"
                 android:layout_width="match_parent"
                 android:background="@drawable/btn_background"
