--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -8,7 +8,7 @@
     tools:context=".Activity.CartActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/emptyTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -19,14 +19,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,33 +46,30 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:text="My Card"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:textColor="@color/black"
                     android:layout_gravity="center"
-                    />
+                    android:layout_weight="1"
+                    android:text="My Card"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cartView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Order Summary"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="18sp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                />
+                android:text="Order Summary"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -310,13 +308,13 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button3"
                 style="@android:style/Widget.Button"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/btn_background"
                 android:layout_width="379dp"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/btn_background"
+                android:text="Order Now"
                 android:textColor="@color/white"
-                android:text="Order Now" />
+                android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
