add login and end order ui

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -201,7 +201,7 @@
                 android:background="@drawable/btn_background"
                 android:textColor="@color/white"
                 android:layout_height="wrap_content"
-                android:text="Buy Now"
+                android:text="Add to Cart"
                 android:textSize="16sp"
                 />
         </LinearLayout>
