--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_Dark">#130041</color>
     <color name="purple_Dark">#521C98</color>
     <color name="purple_light">#9D44C0</color>
     <color name="grey">#E9E9E9</color>
